// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard component snapshot: collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <Card
    orientation="vertical"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div
        className="course-card-main course-card-main--stacked"
      >
        <div
          className="course-card-image-row"
        >
          <div
            className="course-card-image-row__media"
          >
            <div
              className="course-card-image-frame"
            >
              <CourseCardImage
                cardId="test-card-id"
                orientation="horizontal"
              />
            </div>
          </div>
        </div>
        <Card.Body>
          <Card.Header
            actions={null}
            title={
              <CourseCardTitle
                cardId="test-card-id"
              />
            }
          />
          <Card.Section
            className="pt-0"
          >
            <CourseCardDetails
              cardId="test-card-id"
            />
          </Card.Section>
          <Card.Footer
            orientation="vertical"
          >
            <CourseCardActions
              cardId="test-card-id"
            />
          </Card.Footer>
        </Card.Body>
      </div>
      <div
        className="course-card-banners-wrap course-card-banners-wrap--stacked"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
        <div
          className="course-card-banners__actions"
        >
          <CourseCardMenu
            cardId="test-card-id"
          />
        </div>
      </div>
    </div>
  </Card>
</div>
`;

exports[`CourseCard component snapshot: not collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <Card
    orientation="horizontal"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div
        className="course-card-main d-flex"
      >
        <CourseCardImage
          cardId="test-card-id"
          orientation="horizontal"
        />
        <Card.Body>
          <Card.Header
            actions={
              <CourseCardMenu
                cardId="test-card-id"
              />
            }
            title={
              <CourseCardTitle
                cardId="test-card-id"
              />
            }
          />
          <Card.Section
            className="pt-0"
          >
            <CourseCardDetails
              cardId="test-card-id"
            />
          </Card.Section>
          <Card.Footer
            orientation="horizontal"
          >
            <CourseCardActions
              cardId="test-card-id"
            />
          </Card.Footer>
        </Card.Body>
      </div>
      <div
        className="course-card-banners-wrap"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
      </div>
    </div>
  </Card>
</div>
`;
